--- a/META.yml
+++ b/META.yml
@@ -1,9 +1,10 @@
 # http://module-build.sourceforge.net/META-spec.html
 #XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
 name:         File-Walker
-version:      0.01
+version:      0.02
 version_from: lib/File/Walker.pm
 installdirs:  site
+license:      perl
 requires:
     Test::Simple:                  0.47
 
